--- a/package.json
+++ b/package.json
@@ -5,26 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index.js\""
+    "dev": "nodemon dist/index.js"
   },
   "author": "Iman Maris",
   "license": "ISC",
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1"
+    "ioredis": "^5.3.2",
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.8",
     "concurrently": "^8.2.0",
-    "ioredis": "^5.3.2",
-    "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   }
