--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js"
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/index.js\""
   },
   "author": "Iman Maris",
   "license": "ISC",
